<resources>
    <string name="app_name">Fuel Quality App</string>
    <string name="information">Information</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="version">Version</string>
    <string name="switch_color_mode">Light/Dark Mode</string>
    <string name="profile">Profile</string>
    <string name="usernameInput">Enter Username</string>
    <string name="passwordInput">Enter Password</string>
    <string name="loginText">Login</string>
    <string name="registerText">Register</string>
    <string name="createAccount">Dont have an accout? Click here to register.</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="about_app">About App</string>
    <string name="gasStationName">Gas Station</string>
    <string name="numberOfLitres">Number of litres</string>
    <string name="stateOfTachometr">Tachometer</string>
    <string name="benzinaString" translatable="false">Benzina</string>
    <string name="onoString" translatable="false">Tank ONO</string>
    <string name="omvString" translatable="false">OMV</string>
    <string name="shellString" translatable="false">Shell</string>
    <string name="molString" translatable="false">MOL</string>
    <string name="date">Choose date</string>
    <string name="searchGasStations">Search Gas Stations</string>
    <string name="delete">Delete</string>
    <string name="alertDeleteQuestion">Do you want to delete this item?</string>
    <string name="yesButton">Yes</string>
    <string name="noButton">No</string>
    <string name="emptyList">The list of items is empty!</string>
    <string name="chooseItem">You did not choose an item!</string>
    <string name="averageFuelConsumptionText">Your average fuel consumption is:</string>
    <string name="versionValue" translatable="false">1.0</string>
    <string name="notEnoughInputData">Not enough input data.</string>
    <string name="mostVisitedGasStation">Your most visited gas station is:</string>
    <string name="lastFive">Last 5</string>
    <string name="lastTen">Last 10</string>
    <string name="show">Show</string>
    <string name="showLast">Show fuel consumption for last refuellings</string>
</resources>