<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".SettingsActivity">

    <Switch
        android:id="@+id/switchColorMode"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/switch_color_mode"
        android:textColor="@color/textColor"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/switchColorMode"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="@id/switchColorMode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171">

        <TextView
            android:id="@+id/versionView"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/version"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <TextView
            android:id="@+id/versionValue"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="right"
            android:text="@string/versionValue"
            android:textAlignment="gravity"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>